--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,8 @@ project:
 website:
   title: "Jandersolutions"
   navbar:
+    title: Datacado
+    logo: images/logo.png
     right:
       - about.qmd
       - icon: github
@@ -12,7 +14,7 @@ website:
         href: https://twitter.com
 format:
   html:
-    theme: cosmo
+    theme: solar
     css: styles.css
 
 editor: visual
